Final Task Completed

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -117,7 +117,7 @@ CurrentRotGridMode=GridMode_DivisionsOf360
 MRUItem0=/Game/Pinball_Mudassir
 
 [EditorStartup]
-LastLevel=/Game/Pinball_Mudassir
+LastLevel=/Engine/Maps/Templates/Template_Default
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -536,7 +536,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Assets/Blueprints
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1363,6 +1363,8 @@ BlueprintGraph.TimeStamp=2020.06.02-15.25.11
 BlueprintGraph.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2020.06.02-15.27.44
 SequencerWidgets.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2020.06.02-15.28.04
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
